--- a/benchmark/workflow/Snakefile
+++ b/benchmark/workflow/Snakefile
@@ -7,6 +7,7 @@ num_of_refseqs = config["num_of_refseqs"]
 rule all:
     input:
         queries = "results/query_seqs.fasta",
-        ground_truth = "results/ground_truth.txt"
+        ground_truth = "results/ground_truth.txt",
+        prot_ref = "results/ref_seqs_prot.fasta"
 
 include: "rules/simulate.smk"
