--- a/benchmark/workflow/Snakefile
+++ b/benchmark/workflow/Snakefile
@@ -1,14 +1,22 @@
 # config file given when running snakemake
 query_read_len = config["query_read_length"]
 ref_seq_len = config["ref_seq_length"]
+match_len = config["match_length"]
 num_of_qseqs = config["num_of_qseqs"]
 num_of_refseqs = config["num_of_refseqs"]
+num_of_bins = config["num_of_bins"]
+
 
 error_rates = [0, 0.025, 0.05, 0.075, 0.1]
+bins = list(range(num_of_bins))
+bin_ids = [str(x).zfill(2) for x in bins]
+
 
 rule all:
     input:
-        expand("results/er_{er}/lambda_out.m8", er=error_rates)
+        prot = "results/ref_seqs_prot.fasta",
+        bins = expand("results/bins/bin_{bin_id}.fasta", bin_id=bin_ids),
+        queries = expand("results/er_{er}/final_queries.fasta", er=error_rates)
 
 include: "rules/simulate.smk"
 include: "rules/lambda.smk"
