--- a/benchmark/workflow/Snakefile
+++ b/benchmark/workflow/Snakefile
@@ -11,6 +11,7 @@ error_rates = [0, 0.025, 0.05, 0.075, 0.1]
 bins = list(range(num_of_bins))
 bin_ids = [str(x) for x in bins]
 blast_modes = ["blastN", "tBlastN"]
+benchmark_file_names = ["lambda_index", "lambda_search", "lambda_sparse_index", "lambda_sparse_search", "iota"]
 
 
 rule all:
@@ -21,14 +22,18 @@ rule all:
         #queries = expand("results/er_{er}/final_queries.fasta", er=error_rates),
         #binfile = "results/all_bin_paths.txt"
         #valik_out = expand("results/er_{er}/search.gff", er=error_rates),
+        #iota_lambda = expand("results/er_{er}/{blast_mode}/benchmark/iota_lambda.txt", er=error_rates, blast_mode=blast_modes),
         #lambda_db = expand("results/er_{er}/dbs/db_{bin_id}.lba", er=error_rates, bin_id=bin_ids)
-        lambda_out = expand("results/er_{er}/{blast_mode}/lambda/out_{bin_id}.m8", er=error_rates, bin_id=bin_ids, blast_mode=blast_modes),
-        iota = expand("results/er_{er}/{blast_mode}/benchmark/iota_groundtruth.txt", er=error_rates, blast_mode=blast_modes),
-        iota_lambda = expand("results/er_{er}/{blast_mode}/benchmark/iota_lambda.txt", er=error_rates, blast_mode=blast_modes)
+        #lambda_out = expand("results/er_{er}/{blast_mode}/lambda/out_{bin_id}.m8", er=error_rates, bin_id=bin_ids, blast_mode=blast_modes),
+        iota = expand("results/er_{er}/{blast_mode}/iota/results.txt", er=error_rates, blast_mode=blast_modes),
+        sparse = expand("results/er_{er}/{blast_mode}/lambda/sparse_out/results.txt", er=error_rates, blast_mode=blast_modes),
+        combined_bins = expand("results/er_{er}/lambda/blastN_search.m8", er=error_rates)
+
 
 #include: "rules/simulate.smk"
 #include: "rules/valik.smk"
-include: "rules/benchmark.smk"
 include: "rules/simulate2.smk"
-include: "rules/lambda.smk"
 include: "rules/iota.smk"
+include: "rules/lambda.smk"
+include: "rules/benchmark.smk"
+
