[fix] adjustment to different environment, bug in inserting match twice

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 benchmark/.snakemake
-benchmark/results/*
+benchmark/results*/*
 benchmark/logs/*
-benchmark/benchmarks/*
+benchmark/benchmarks*/*
 
 build/*
 build_old/*
